--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
  </head>
- <body>  	
+ <body>  
+ 	<script type="text/javascript">
+ 		alert(1);
+ 	</script>	
  </body>
 </html>
